# cpp_tun2socks_project

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
core/: Connection.cpp  Connection.h  LwipStack.cpp  LwipStack.h  TunDevice.cpp  TunDevice.h  TunnelLoop.cpp  TunnelLoop.h  lib_asio_beast.cpp  lwipopts.h
